--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -18,6 +18,7 @@
 
   /* Colors */
   --black: #464646;
+  --lightgray: #a2a2a2;
   --blue: #2a7ae4;
   --gray: #f5f5f5;
   --lightblue: #eaf2fd;
@@ -29,6 +30,29 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--fontfamilydefault);
+  display: flex;
+  flex-direction: column;
+}
+
+li {
+  list-style: none;
+}
+
+::placeholder {
+  font-family: var(--fontfamilydefault);
+  color: var(--lightgray);
+  padding: 10px;
+}
+
+textarea {
+  resize: none;
+  border: none;
+  border-bottom: 1px solid var(--lightgray);
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid var(--lightgray);
 }
 
 .btn {
