--- a/styles/mobile__mq.css
+++ b/styles/mobile__mq.css
@@ -60,10 +60,8 @@
     font-weight: var(--mediumfontweight);
   }
 
-  .products__section {
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
+  .products {
+    height: 600px;
   }
 
   .products__section {
@@ -98,15 +96,16 @@
   .product__container {
     display: grid;
     justify-content: center;
+    width: 328px;
+    height: 588px;
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
-    width: 328px;
     margin: auto;
   }
   .product__container {
     width: 156px;
     height: 249px;
-    line-height: 8px;
+    line-height: 5px;
   }
   .product__img {
     width: 156px;
@@ -121,5 +120,46 @@
     font-size: var(--normalfontsize);
     color: var(--black);
     font-weight: var(--largefontweight);
+  }
+
+  .about__container {
+    padding-block: 16px;
+    width: 100%;
+    height: 553px;
+    background-color: var(--lightblue);
+  }
+
+  .about__nav__container {
+    width: 328px;
+    margin: auto;
+    text-align: center;
+  }
+
+  .about__links {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .about__links a {
+    text-decoration: none;
+    color: var(--black);
+    line-height: 19px;
+  }
+
+  .contact__container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 328px;
+    margin: auto;
+  }
+
+  input {
+    height: 56px;
+  }
+
+  textarea {
+    height: 82px;
   }
 }
