--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -18,9 +18,9 @@
 
   /* Colors */
   --black: #464646;
-  --lightgray: #a2a2a2;
+  --gray: #a2a2a2;
   --blue: #2a7ae4;
-  --gray: #f5f5f5;
+  --lightgray: #f5f5f5;
   --lightblue: #eaf2fd;
   --withe: #ffffff;
 }
@@ -40,7 +40,7 @@ li {
 
 ::placeholder {
   font-family: var(--fontfamilydefault);
-  color: var(--lightgray);
+  color: var(--gray);
   padding: 10px;
 }
 
