--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -85,3 +85,10 @@ input {
     cursor: pointer;
   }
 }
+
+.rodape {
+  height: 102px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
