--- a/styles/desktop__mq.css
+++ b/styles/desktop__mq.css
@@ -56,6 +56,7 @@
     justify-content: space-around;
     align-items: start;
     width: 100%;
+    align-items: center;
   }
 
   .container__hero {
@@ -75,7 +76,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    border: 1px solid red;
   }
 
   .text__hero {
@@ -177,7 +177,6 @@
   .about__container {
     display: flex;
     width: 1136px;
-    height: 240px;
     margin: auto;
     align-items: baseline;
   }
@@ -218,5 +217,43 @@
 
   textarea {
     height: 82px;
+  }
+
+  .p__rodape {
+    font-size: var(--normalfontsize);
+  }
+
+  .login__page__container {
+    display: flex;
+    height: 600px;
+    background-color: var(--lightgray);
+  }
+
+  .form__input {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 423px;
+    height: 300px;
+    margin: auto;
+    gap: 16px;
+  }
+
+  .login__title {
+    font-size: var(--xnormalfontsize);
+  }
+
+  .input__email__login {
+    background-color: var(--withe);
+  }
+
+  .input__password__login {
+    background-color: var(--withe);
+  }
+
+  .btn.blue__btn.login__btn {
+    width: 100%;
+    height: 62px;
+    font-size: var(--xnormalfontsize);
   }
 }
