--- a/styles/mobile__mq.css
+++ b/styles/mobile__mq.css
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    align-items: center;
   }
 
   .serching__container {
@@ -170,5 +171,45 @@
 
   textarea {
     height: 82px;
+  }
+
+  .p__rodape {
+    font-size: var(--smallfontsize);
+  }
+
+  .login__page__container {
+    display: flex;
+    height: 600px;
+    background-color: var(--lightgray);
+  }
+
+  .form__input {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 275px;
+    margin: auto;
+    gap: 16px;
+  }
+
+  .login__title {
+    font-size: var(--xnormalfontsize);
+  }
+
+  .input__email__login {
+    height: 41px;
+    background-color: var(--withe);
+  }
+
+  .input__password__login {
+    height: 41px;
+    background-color: var(--withe);
+  }
+
+  .btn.blue__btn.login__btn {
+    width: 50%;
+    margin-inline: auto;
+    height: 40px;
+    font-size: var(--smallfontsize);
   }
 }
