--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -14,6 +14,7 @@
   --xlargefontsize: 52px;
 
   /* Font-weigh */
+  --lightfontweight: 400;
   --mediumfontweight: 600;
   --largefontweight: 700;
 
@@ -99,8 +100,13 @@ a {
 }
 
 .rodape {
+  background-color: var(--withe);
   height: 102px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+i {
+  margin-left: 5px;
 }
