--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -22,6 +22,8 @@
   --black: #464646;
   --gray: #a2a2a2;
   --blue: #2a7ae4;
+  --skyblue: #5595e9;
+  --lightblue: #d4e4fa;
   --lightgray: #f5f5f5;
   --lightblue: #eaf2fd;
   --withe: #ffffff;
@@ -82,12 +84,20 @@ a {
   background: transparent;
   border: 1px solid var(--blue);
   color: var(--blue);
+  transition: 0.4s;
+  &:hover {
+    background: var(--lightblue);
+  }
 }
 
 .btn.blue__btn {
   background: var(--blue);
   border: none;
   color: var(--withe);
+  transition: 0.4s;
+  &:hover {
+    background: var(--skyblue);
+  }
 }
 
 .search__btn {
