--- a/styles/mobile__mq.css
+++ b/styles/mobile__mq.css
@@ -135,7 +135,7 @@
   .about__container {
     padding-block: 16px;
     width: 100%;
-    height: 553px;
+    height: auto;
     background-color: var(--lightblue);
   }
 
@@ -148,13 +148,15 @@
   .about__links {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 16px;
   }
 
-  .about__links a {
+  .about__links li a {
     text-decoration: none;
     color: var(--black);
-    line-height: 19px;
+    width: 306px;
+    justify-content: center;
   }
 
   .contact__container {
