--- a/styles/desktop__mq.css
+++ b/styles/desktop__mq.css
@@ -236,7 +236,7 @@
     flex-direction: column;
     text-align: center;
     width: 423px;
-    height: 300px;
+    height: 500px;
     margin: auto;
     gap: 16px;
   }
@@ -257,5 +257,11 @@
     width: 100%;
     height: 62px;
     font-size: var(--xnormalfontsize);
+  }
+
+  .new__file__product {
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: var(--withe);
   }
 }
