--- a/styles/desktop__mq.css
+++ b/styles/desktop__mq.css
@@ -114,7 +114,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 32px;
     width: 1136px;
     margin: auto;
   }
@@ -171,7 +170,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 368px;
+    height: 400px;
     background-color: var(--lightblue);
   }
 
@@ -179,13 +178,14 @@
     display: flex;
     width: 1136px;
     margin: auto;
+    height: auto;
     align-items: baseline;
   }
 
   .about__nav__container {
     display: flex;
     width: 500px;
-    height: 300px;
+    height: 380px;
     justify-content: space-around;
   }
 
@@ -208,7 +208,7 @@
     align-self: start;
     gap: 16px;
     width: 560px;
-    height: 300px;
+    height: 380px;
     margin: auto;
     text-align: start;
   }
